fix: Some site specific CSS and javascript to make audio players visible (since we mangle custom players)

--- a/web/static/css/feedthing.css
+++ b/web/static/css/feedthing.css
@@ -551,8 +551,16 @@ th,td {
 
 }
 
-img.wp-smiley {
+img.wp-smiley { /* wordpress */
     height: 1em;
     max-height: 1em;
     width: 1em;
+}
+
+div.kg-audio-player { /* relatively common audio player */
+    display:none;
+}
+
+p.button-wrapper span { /* substack */
+    padding:8px;
 }
